modules/hosts/b550/k3s/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: open-webui
  namespace: open-webui
spec:
  type: ClusterIP
  selector:
    app: open-webui
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
