modules/hosts/b550/k3s/open-webui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: open-webui
  namespace: open-webui
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - owi.cs.groovyreserve.com
        - owi.groovyreserve.com
  rules:
    - host: owi.cs.groovyreserve.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
    - host: owi.groovyreserve.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: open-webui
                port:
                  number: 80
